fix(footer): rooms pagination z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -241,4 +241,5 @@ h2 {
   background-color: #f5f5f5;
   height: 60px;
   text-align: center;
+  z-index: 100;
 }
